result/chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: result
  name: result
spec:
  type: ClusterIP
  ports:
  - name: result
    port: 80
  selector:
    app: result
